# weather-lab

./: .gitignore  collect_rp2040_modbus.py  main.py  ml_shared.py  pyproject.toml  실습매뉴얼_공공데이터_RP2040_MySQL.md
seed/: README.md
