[project]
name = "weather-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pymodbus>=3.13.0",
    "pymysql>=1.2.0",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.21.0",
]
